--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "ng-infinite-scroll-npm-is-better-than-bower": "ngInfiniteScroll#^1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
