--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "ng-infinite-scroll-npm-is-better-than-bower": "ngInfiniteScroll#^1.3.1"
+    "ng-infinite-scroll-npm-is-better-than-bower": "ngInfiniteScroll#^1.3.1",
+    "angular-dragdrop": "^1.0.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
